health check added

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
     </main>
 
     <footer class="mt-auto text-white-50">
-        <p>Created by Me</p>
+        <p>Created by Myself</p>
     </footer>
 </div>
 
